harden local management deployment
